Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.8.2, 5.0.0 Beta 1
-
None
-
fe8962d3a506a850878401309f81247c80f3d203
Description
The format that the locales are returned by QLocale::uiLanguages() is unexpected. While usually the parts of a locale are separated by a "_", here they are separated by a "-".
For example for a LANG=de_DE.UTF-8 uiLanguages returns de-DE.
Attachments
Issue Links
- relates to
-
QTCREATORBUG-8253 can't load Simplified and Traditional Chinese translation correctly via System Language option
-
- Closed
-