Fix default ui language on Linux.

On systems where uiLanguages returns something containing "-"
(e.g. "de-DE", see QTBUG-25973)

Change-Id: Ibe2db6a7a6ed893795e3f3110b33c39225bed751
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@nokia.com>